--- a/gen/cmd/Cargo.toml
+++ b/gen/cmd/Cargo.toml
@@ -14,5 +14,5 @@ path = "src/main.rs"
 clap = { version = "3.1.8", features = ["derive"] }
 proc-macro2 = "1.0"
 quote = "1.0.4"
-syn = { version = "1.0.70", features = ["full", "printing"] }
+syn = { version = "1.0.70", features = ["full", "printing", "extra-traits"] }
 thiserror = "1"
