--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,6 +18,7 @@ jobs:
       - run: rustup component add clippy
       - run: make clippy
 
+  fmt:
     name: Rustfmt
     runs-on: ubuntu-latest
     steps:
