--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,13 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Use OCaml
+        uses: avsm/setup-ocaml@v2
+        with:
+          ocaml-version: 4.13.0
+
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
           override: true
       - run: rustup component add clippy
-      - run: make clippy
+      - run: opam exec -- make clippy
 
   fmt:
     name: Rustfmt
