--- a/tests/ocaml/dune
+++ b/tests/ocaml/dune
@@ -12,3 +12,17 @@
  (modules test_cmd)
  (libraries base sexplib stdio test_lib)
  (preprocess (pps ppx_expect ppx_sexp_conv)))
+
+(library
+ (name arrow_gen)
+ (modules arrow_gen)
+ (foreign_archives ocaml_rust_arrow)
+ (libraries base sexplib stdio)
+ (preprocess (pps ppx_sexp_conv))
+ (c_library_flags (-lpthread -lc -lm)))
+
+(executable
+ (name arrow_cmd)
+ (modules arrow_cmd)
+ (libraries arrow_gen base sexplib stdio)
+ (preprocess (pps ppx_sexp_conv)))
