More arrow wrapping.

--- a/tests/arrow/dune
+++ b/tests/arrow/dune
@@ -2,7 +2,7 @@
  (name arrow_lib)
  (modules arrow_core arrow_gen arrow_test)
  (foreign_archives ocaml_rust_arrow)
- (libraries core sexplib stdio)
+ (libraries core core_unix.time_ns_unix sexplib stdio)
  (inline_tests)
  (preprocess (pps ppx_expect ppx_sexp_conv ppx_sexp_message))
  (c_library_flags (-lpthread -lc -lm)))
