--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           ocaml-version: ${{ matrix.ocaml-version }}
 
-      - run: opam install base sexplib stdio ppx_sexp_conv ppx_expect
+      - run: opam install base core_unix sexplib stdio ppx_sexp_conv ppx_expect ppx_sexp_message
 
       - uses: actions-rs/toolchain@v1
         with:
